Add documentation to build block

--- a/analysis-example/default-detekt-config.yml
+++ b/analysis-example/default-detekt-config.yml
@@ -1,5 +1,7 @@
 autoCorrect: true
 
+# Каждое замечание в имеет свой "вес" в зависимости от принадлежности к ruleSet.
+# В данном блоке производится настройка "весов" для кадого ruleSet и лимит до ошибки и предупреждения.
 build:
   warningThreshold: 5
   failThreshold: 10
