Добавил описание LargeClass

--- a/analysis-example/default-detekt-config.yml
+++ b/analysis-example/default-detekt-config.yml
@@ -41,6 +41,7 @@ complexity:
   # Срабатывает, если количество входных параметров у функции больше указанного числа
   LongParameterList:
     threshold: 5
+  # Срабатывает, если количество строк с действиями в классе больше указанного числа
   LargeClass:
     threshold: 150
   ComplexMethod:
