Добавил кжокументацию к блоку comments

--- a/analysis-example/default-detekt-config.yml
+++ b/analysis-example/default-detekt-config.yml
@@ -119,12 +119,16 @@ style:
 
 comments:
   active: true
+  # Срабатывает, при присутствии документации к приватному методу.
   CommentOverPrivateMethod:
     active: true
+  # Срабатывает, при присутствии документации к приватному полю.
   CommentOverPrivateProperty:
     active: true
+  # Срабатывает, при отсутствии документации к публичному классу.
   NoDocOverPublicClass:
     active: false
+  # Срабатывает, при отсутствии документации к публичному методу.
   NoDocOverPublicMethod:
     active: false
 
