--- a/analysis-example/default-detekt-config.yml
+++ b/analysis-example/default-detekt-config.yml
@@ -109,6 +109,7 @@ style:
   active: true
   WildcardImport:
     active: true
+  # Срабатывает, при нарушении правил.
   NamingConventionViolation:
     active: true
     variablePattern: '^(_)?[a-z$][a-zA-Z$0-9]*$'
